# subs2cia

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SRS_Export.md  TODO.md  USAGE.md  pyproject.toml  requirements.txt  setup.py
subs2cia/: CardExport.py  Common.py  README.md  __init__.py  __main__.py  argparser.py  cli.py  condense.py  ffmpeg_tools.py  main.py  pgsreader.py  pickers.py  sources.py  subtools.py  subzipper.py
subs2cia/tests/: ffmpeg_tools_audiotrim_test.py  ffmpeg_tools_frame_test.py  group_test.py  sources_partition_streams_test.py  subtools_test.py
subs2cia_v2/: README.md  __init__.py  argparser.py  cli.py  condense.py  ffmpeg_tools.py  main.py  pickers.py  sources.py  streams.py  subtools.py
